[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/LassoKnightSprites/CHICKENS.png" type="Texture" id=1]
[ext_resource path="res://entities/shooter/Shooter.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "walk",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 19, 19 )

[node name="Shooter" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 4
script = ExtResource( 2 )
capture_time = 2

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 4 )
animation = "walk"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 6 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
self_modulate = Color( 0.968627, 0, 1, 1 )
shape = SubResource( 7 )

[node name="MaxMovementClock" type="Timer" parent="."]

[node name="MinMovementClock" type="Timer" parent="."]

[node name="BulletClock" type="Timer" parent="."]

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="MaxMovementClock" to="." method="_on_MaxMovementClock_timeout"]
[connection signal="timeout" from="MinMovementClock" to="." method="_on_MinMovementClock_timeout"]
[connection signal="timeout" from="BulletClock" to="." method="_on_BulletClock_timeout"]
